# discord-ta-bot

./: .gitignore  Conventions.md  LICENSE  README.md  env_example  pyproject.toml  requirements.txt
assets/: emojis.json
discord-ta-bot/: Bot.py
discord-ta-bot/cogs/: _canvas.py  _role.py  _template.py  admin.py  canvas.py  role.py  role2.py
discord-ta-bot/deprecated/: group.py  lib_db.py
discord-ta-bot/objects/: __init__.py  guild.py
discord-ta-bot/utils/: db.py
docs/: Makefile  conf.py
src/discord_ta_bot/: Bot.py
src/discord_ta_bot/cogs/: _canvas.py  _template.py  admin.py  role.py
src/discord_ta_bot/deprecated/: utils_db.py
src/discord_ta_bot/objects/: canvas_course.py  guild.py
