[project]
name = "discord-ta-bot"
version = "0.1.1"
description = "Discord bot for TA life. Role-assignment, canvas and github integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.7.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
discord-ta-bot = "discord_ta_bot.Bot:main"

[dependency-groups]
docs = [
    "sphinx>=7.2.6",
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-nb>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.12"]
build-backend = "uv_build"
